--- a/test.html
+++ b/test.html
@@ -1,1 +1,28 @@
-Hello World
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>Ari&Style Beranda</title>
+</head>
+
+<body>
+
+    <h1>Selamat Datang di Ari&Style</h1>
+    
+    <nav>
+        <ul>
+            <li><a href="#pria">Pria</a></li>
+            <li><a href="#wanita">Wanita</a></li>
+            <li><a href="#aksesoris">Aksesoris</a></li>
+        </ul>
+    </nav>
+    
+    <h2>Produk Terbaru</h2>
+
+    <footer>
+        <p>&copy; 2023 Ari&Style</p>
+    </footer>
+
+</body>
+
+</html>
